--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,12 @@
 <ul class='unstyled-list'>
-<% page_articles.each_with_index do |article, i| %>
-  <li>
-    <h3 class='detailed-item'>
-      <%= link_to article.title, article, class: 'item', title: superstrip(article.summary) %>
-      <time class='detail' datetime="<%= article.date.utc %>"><%= article.date.strftime('%B %d, %Y') %></time>
-    </h3>
-  </li>
-<% end %>
+  <% page_articles.sort_by{ |a| "#{a.date}#{a.title}"}.reverse.each_with_index do |article, i| %>
+    <% unless article.data.draft %>
+      <li>
+        <h3 class='detailed-item'>
+          <%= link_to article.title, article, class: 'item', title: superstrip(article.summary) %>
+          <time class='detail' datetime="<%= article.date.utc %>"><%= article.date.strftime('%B %d, %Y') %></time>
+        </h3>
+      </li>
+    <% end %>
+  <% end %>
 </ul>
