monkeypatch middleman-google-analytics to use the latest analytics.js

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
     <title><%= page_title %></title>
     <%= feed_tag :atom, feed_url, title: feed_title %>
     <%= stylesheet_link_tag "style" %>
-    <%= google_analytics_tag %>
+    <%= google_analytics %>
   </head>
 
   <body class="<%= page_classes %>">
