--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,7 +25,7 @@
 
     <header class='site-header'>
       <div class="main">
-        <h1 class="logo"><a href="/">kiki.to</a></h1>
+        <h1 class="logo"><a href="/"><%= site_title %></a></h1>
         <nav class='site-nav'>
           <ul class='horizontal-list'>
             <li><a class='site-nav-link' href="/about">About</a></li>
